# File: CMakeLists.txt
# Description: CMake configuration file for building the cpp_101 project.

cmake_minimum_required(VERSION 3.20)
project(cpp_101 LANGUAGES CXX)

# Set C++ standard to C++20
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set the common output directory for all example targets
set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin/examples/${CMAKE_BUILD_TYPE}")

# Function to create a target for each example
function(add_example_target EXAMPLE_NAME)
    get_filename_component(TARGET_NAME ${EXAMPLE_NAME} NAME)
    add_executable(${TARGET_NAME} src/${EXAMPLE_NAME}.cpp)
    set_target_properties(${TARGET_NAME} PROPERTIES
                          RUNTIME_OUTPUT_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/${EXAMPLE_NAME}")
endfunction()

# Example targets
add_example_target(1__introduction/hello_world)
add_example_target(2__variables_and_data_types/declaring_and_initializing_variables)
add_example_target(2__variables_and_data_types/fundamental_data_types)
add_example_target(2__variables_and_data_types/type_inference)
add_example_target(3__control_flow/if_else_statements)
add_example_target(3__control_flow/switch_statements)
add_example_target(3__control_flow/loops)
add_example_target(4__functions/defining_functions)
add_example_target(4__functions/function_parameters)
add_example_target(4__functions/function_overloading)
add_example_target(5__arrays_and_strings/working_with_arrays)
add_example_target(5__arrays_and_strings/c_style_strings_vs_cpp_strings)
add_example_target(6__pointers_and_references/pointers_and_pointer_arithmetic)
add_example_target(6__pointers_and_references/references_and_reference_variables)
add_example_target(7__object_oriented_programming/classes_and_objects)
add_example_target(7__object_oriented_programming/constructors_and_destructors)
add_example_target(7__object_oriented_programming/member_functions_and_data_members)
add_example_target(8__operator_overloading/overloading_arithmetic_comparison_and_assignment_operators)
add_example_target(8__operator_overloading/friend_functions)
add_example_target(9__inheritance_and_polymorphism/base_and_derived_classes)
add_example_target(9__inheritance_and_polymorphism/virtual_functions_and_dynamic_polymorphism)
add_example_target(10__stl_containers/std_vector)
add_example_target(10__stl_containers/std_list)
add_example_target(10__stl_containers/std_deque)
add_example_target(10__stl_containers/std_forward_list)
add_example_target(10__stl_containers/std_array)
add_example_target(10__stl_containers/std_set)
add_example_target(10__stl_containers/std_multiset)
add_example_target(10__stl_containers/std_map)
add_example_target(10__stl_containers/std_multimap)
add_example_target(10__stl_containers/std_unordered_set)
add_example_target(10__stl_containers/std_unordered_multiset)
add_example_target(10__stl_containers/std_unordered_map)
add_example_target(10__stl_containers/std_unordered_multimap)
add_example_target(11__stl_algorithms/std_sort)
add_example_target(11__stl_algorithms/std_stable_sort)
add_example_target(11__stl_algorithms/std_partial_sort)
add_example_target(11__stl_algorithms/std_nth_element)
add_example_target(11__stl_algorithms/std_make_heap)
add_example_target(11__stl_algorithms/std_push_heap)
add_example_target(11__stl_algorithms/std_pop_heap)
add_example_target(11__stl_algorithms/std_is_heap)
add_example_target(11__stl_algorithms/std_min_element)
add_example_target(11__stl_algorithms/std_max_element)
add_example_target(11__stl_algorithms/std_find)
add_example_target(11__stl_algorithms/std_find_if)
add_example_target(11__stl_algorithms/std_find_if_not)
add_example_target(11__stl_algorithms/std_find_end)
add_example_target(11__stl_algorithms/std_find_first_of)
add_example_target(11__stl_algorithms/std_adjacent_find)
add_example_target(11__stl_algorithms/std_count)
add_example_target(11__stl_algorithms/std_count_if)
add_example_target(11__stl_algorithms/std_binary_search)
add_example_target(11__stl_algorithms/std_lower_bound)
add_example_target(11__stl_algorithms/std_upper_bound)
add_example_target(11__stl_algorithms/std_equal_range)
add_example_target(11__stl_algorithms/std_merge)
# add_example_target(11__stl_algorithms/std_inplace_merge)
# add_example_target(11__stl_algorithms/std_includes)
# add_example_target(11__stl_algorithms/std_set_union)
# add_example_target(11__stl_algorithms/std_set_intersection)
# add_example_target(11__stl_algorithms/std_set_difference)
# add_example_target(11__stl_algorithms/std_set_symmetric_difference)
# add_example_target(11__stl_algorithms/std_transform)
# add_example_target(11__stl_algorithms/std_replace)
# add_example_target(11__stl_algorithms/std_replace_if)
# add_example_target(11__stl_algorithms/std_replace_copy)
# add_example_target(11__stl_algorithms/std_replace_copy_if)
# add_example_target(11__stl_algorithms/std_copy)
# add_example_target(11__stl_algorithms/std_copy_if)
# add_example_target(11__stl_algorithms/std_copy_n)
# add_example_target(11__stl_algorithms/std_copy_backward)
# add_example_target(11__stl_algorithms/std_move)
# add_example_target(11__stl_algorithms/std_move_backward)
# add_example_target(11__stl_algorithms/std_fill)
# add_example_target(11__stl_algorithms/std_fill_n)
# add_example_target(11__stl_algorithms/std_generate)
# add_example_target(11__stl_algorithms/std_generate_n)
# add_example_target(11__stl_algorithms/std_remove)
# add_example_target(11__stl_algorithms/std_remove_if)
# add_example_target(11__stl_algorithms/std_remove_copy)
# add_example_target(11__stl_algorithms/std_remove_copy_if)
# add_example_target(11__stl_algorithms/std_unique)
# add_example_target(11__stl_algorithms/std_unique_copy)
# add_example_target(11__stl_algorithms/std_reverse)
# add_example_target(11__stl_algorithms/std_reverse_copy)
# add_example_target(11__stl_algorithms/std_rotate)
# add_example_target(11__stl_algorithms/std_rotate_copy)
# add_example_target(11__stl_algorithms/std_random_shuffle)
# add_example_target(11__stl_algorithms/std_shuffle)
# add_example_target(11__stl_algorithms/std_sample)
# add_example_target(11__stl_algorithms/std_sort_heap)
# add_example_target(11__stl_algorithms/std_is_sorted)
# add_example_target(11__stl_algorithms/std_is_sorted_until)
# add_example_target(11__stl_algorithms/std_partition)
# add_example_target(11__stl_algorithms/std_partition_copy)
# add_example_target(11__stl_algorithms/std_stable_partition)
# add_example_target(11__stl_algorithms/std_search)
# add_example_target(11__stl_algorithms/std_search_n)
# add_example_target(11__stl_algorithms/std_for_each)
# add_example_target(11__stl_algorithms/std_for_each_n)
# add_example_target(11__stl_algorithms/std_all_of)
# add_example_target(11__stl_algorithms/std_any_of)
# add_example_target(11__stl_algorithms/std_none_of)
# add_example_target(11__stl_algorithms/std_accumulate)
# add_example_target(11__stl_algorithms/std_inner_product)
# add_example_target(11__stl_algorithms/std_adjacent_difference)
# add_example_target(11__stl_algorithms/std_partial_sum)
# add_example_target(11__stl_algorithms/std_reduce)
# add_example_target(11__stl_algorithms/std_transform_reduce)
# add_example_target(11__stl_algorithms/std_inclusive_scan)
# add_example_target(11__stl_algorithms/std_exclusive_scan)
# add_example_target(11__stl_algorithms/std_transform_exclusive_scan)
# add_example_target(11__stl_algorithms/std_transform_inclusive_scan)
# add_example_target(11__stl_algorithms/std_equal)
# add_example_target(11__stl_algorithms/std_lexicographical_compare)
# add_example_target(11__stl_algorithms/std_mismatch)
add_example_target(12__exception_handling/try_catch_blocks)
add_example_target(12__exception_handling/custom_exception_classes)
add_example_target(13__cpp_11_features/lambda_expressions)
add_example_target(13__cpp_11_features/range_based_for_loops)
add_example_target(13__cpp_11_features/smart_pointers)
add_example_target(14__cpp_14_features/generic_lambdas)
add_example_target(14__cpp_14_features/variable_templates)
add_example_target(15__cpp_17_features/structured_bindings)
add_example_target(15__cpp_17_features/std_optional_and_std_variant)
# add_example_target(16__cpp_20_features/modules)
add_example_target(16__cpp_20_features/concepts)
# add_example_target(16__cpp_20_features/coroutines)
